2012-07-30  Dmitry Xmelkov  <dmix@gmail.ru>

	patch #3729: Printf for integers speed up
	Thanks to Georg-Johann Lay.
	* doc/api/bench-libc.dox: Regenerate with GCC 4.7.1 (and new integer
	to ASCII functions).
	* include/stdlib.h: Define *toa() as inline functions.
	* libc/misc/Files.am: Add new files.
	* libc/misc/itoa.S: Rewrite.
	* libc/misc/itoa_ncheck.S: New file.
	* libc/misc/ltoa.S: Rewrite.
	* libc/misc/ltoa_ncheck.S: New file.
	* libc/misc/ultoa.S: Rewrite.
	* libc/misc/ultoa_ncheck.S: New file.
	* libc/misc/utoa.S: Rewrite.
	* libc/misc/utoa_ncheck.S: New file.
	* tests/simulate/stdlib/itoa-1.c: New file.
	* tests/simulate/stdlib/itoa-2.c: New file.
	* tests/simulate/stdlib/ltoa-1.c: New file.
	* tests/simulate/stdlib/ltoa-2.c: New file.
	* tests/simulate/stdlib/ultoa-1.c: New file.
	* tests/simulate/stdlib/ultoa-2.c: New file.
	* tests/simulate/stdlib/ultoa-3.c: New file.
	* tests/simulate/stdlib/utoa-1.c: New file.
	* tests/simulate/stdlib/utoa-2.c: New file.
	* tests/simulate/stdlib/utoa-3.c: New file.

2012-06-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/signature.h (__signature): mark as "used"
	so the linker won't throw it away
	* include/avr/fuse.h (FUSEMEM): (Dito.)
	* include/avr/lock.h (LOCKMEM): (Dito.)

2012-06-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Reported by Itai Nahshon:
	XXX_vect_num not consistent io90pwmx.h, iousbxx6_7.h
	* include/avr/iousbxx6_7.h (TWI_vect_num): make this a number
	* include/avr/io90pwmx.h (TIMER1_COMPA_vect_num): (Dito.)

2012-06-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #36581: avr-libc: pgmspace.h is not ANSI compliant
	* include/avr/pgmspace.h (strlen_P): use __inline__ rather
	than inline to be independent from the compiler's standard
	level option

2012-05-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #31267: misleading header iom128rfa1.h
	* include/iom128rfa1.h: remove vectors 51 through 56

2012-05-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
